Fix bad quotes!! And stop leaderboard game container from weird shifting

--- a/src/components/gameContainer/gameContainer.css
+++ b/src/components/gameContainer/gameContainer.css
@@ -6,7 +6,7 @@
   border-width: 5px;
   border-radius: 10px;
   border-color: #3f51b5;
-  min-height: 300px;
+  min-height: 325px;
   margin-bottom: 15px;
   padding-bottom: 15px;
 }
